# joseki

./: .cookiecutter.json  .darglint  .flake8  .gitignore  .pdm.toml  .pre-commit-config.yaml  .readthedocs.yml  404.html  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  index.html  latest  maintainers.md  mkdocs.yml  mypy.ini  noxfile.py  objects.inv  pyproject.toml  references.bib  sitemap.xml  versions.json
.github/workflows/: constraints.txt  release.yml  tests.yml
2.0/: index.html  sitemap.xml
2.0/_build/: license.html
2.0/_build/_sources/: user_guide.rst.txt
2.0/bibliography/: index.html
2.0/changelog/: index.html
2.0/how-to-guides/: index.html
2.0/reference/: index.html
2.1/: index.html
2.1.0/: sitemap.xml
2.1.0/_build/_sources/: terminology.rst.txt
2.1.0/bibliography/: index.html
2.1.0/changelog/: index.html
2.1/_build/: bibliography.html
2.1/_build/_sources/: reference.rst.txt
2.2/: 404.html  objects.inv  tutorials.ipynb
2.2.0/: index.html
2.2.0/_build/: py-modindex.html  search.html  searchindex.js  terminology.html
2.2.0/changelog/: index.html
2.2.0/how-to-guides/: index.html
2.2/_build/: objects.inv
2.2/bibliography/: index.html
2.2/explanation/: index.html
2.2/how-to-guides/: index.html
2.2/reference/: index.html
2.2/tutorials/: index.html
2.3/: objects.inv  sitemap.xml
2.3/changelog/: index.html
2.3/reference/: index.html
2.4/: bibliography.bib  index.html  objects.inv  sitemap.xml
2.4/_build/: genindex.html  index.html
2.4/_build/_sources/: format.rst.txt
2.4/changelog/: index.html
2.4/how-to-guides/: index.html
2.4/reference/: index.html
2.4/tutorials/: index.html
2.5/: index.html  objects.inv
2.5.1/: 404.html  objects.inv
2.5.1/_build/: cli.html  format.html
2.5.1/_build/_sources/: index.rst.txt
2.5.1/changelog/: index.html
2.5.1/how-to-guides/: index.html
2.5.1/reference/: index.html
2.5.2/: objects.inv
2.5.2/changelog/: index.html
2.5.2/explanation/: index.html
2.5.2/how-to-guides/: index.html
2.5.2/reference/: index.html
2.5.2/tutorials/: index.html
2.5/_build/: user_guide.html
2.5/_build/_sources/: cli.rst.txt
2.5/changelog/: index.html
2.5/reference/: index.html
2.6.0/: index.html
2.6.0/bibliography/: index.html
2.6.0/changelog/: index.html
2.6.0/reference/: index.html
2.6.1/: 404.html  index.html  objects.inv
2.6.1/bibliography/: index.html
2.6.1/changelog/: index.html
2.6.1/explanation/: index.html
2.6.1/how-to-guides/: index.html
2.6.1/reference/: index.html
2.6.1/tutorials/: index.html
_build/: codeofconduct.html  contributing.html  reference.html
bibliography/: index.html
changelog/: index.html
docs/: bibliography.bib  bibliography.md  changelog.md  conf.py  explanation.md  format.rst  how-to-guides.md  index.md  index.rst  reference.md  reference.rst  references.bib  requirements.txt  terminology.rst  tutorials.ipynb  tutorials.md  usage.rst  user_guide.rst
docs/reference/: index.rst
explanation/: index.html
how-to-guides/: index.html
latest/_build/: bibliography.html  cli.html  codeofconduct.html  contributing.html  format.html  genindex.html  index.html  license.html  py-modindex.html  reference.html  search.html  terminology.html  user_guide.html
latest/bibliography/: index.html
latest/changelog/: index.html
latest/explanation/: index.html
latest/how-to-guides/: index.html
latest/reference/: index.html
latest/tutorials/: index.html
major.minor.patch/changelog/: index.html
major.minor.patch/explanation/: index.html
major.minor.patch/how-to-guides/: index.html
major.minor.patch/reference/: index.html
major.minor.patch/search/: search_index.json
major.minor.patch/tutorials/: index.html
notebooks/: examples_plotting.ipynb
reference/: index.html
search/: search_index.json
src/joseki/: __init__.py  __main__.py  _version.py  accessor.py  afgl_1986.py  constants.py  core.py  mipas_rfm.py  rfm.py  tests_util.py  units.py  ussa_1976.py  util.py
src/joseki/data/: README.md  __init__.py  afgl1986-table_1d.csv  afgl1986-table_2a.csv  afgl1986-table_2b.csv  afgl1986-table_2c.csv  afgl1986-table_2d.csv  afgl_1986-table_1a.csv  afgl_1986-table_1e.csv  afgl_1986-table_1f.csv  units.txt
src/joseki/data/afgl_1986/: README.md  __init__.py  readme.txt  table_1b.csv  table_1c.csv  table_1e.csv
src/joseki/data/ecmwf/: README.md  model_levels_60.csv
src/joseki/data/mipas_2007/: README.md  __init__.py  extra.atm  midlatitude_night.atm  tropical.atm
src/joseki/data/rfm/: __init__.py  day_imk.atm  extra.atm  extra_imk.atm  minor.atm  mls.atm  mlw.atm  ngt_imk.atm  readme.txt  sas.atm  saw.atm  std.atm  sum_imk.atm  tro.atm  win_imk.atm
src/joseki/profiles/: __init__.py  afgl_1986.py  cams.py  core.py  factory.py  mipas_2007.py  schema.py  ussa_1976.py  util.py
src/joseki/profiles/ussa_1976/: __init__.py  constants.py  core.py
tests/: __init__.py  test_accessor.py  test_afgl_1986.py  test_core.py  test_main.py  test_mipas_rfm.py  test_rfm.py  test_units.py  test_util.py
tests/data/: 232f85b4-b3e9-47a7-a52d-9f955c38b9f6.nc  README.md
tests/data/97da7a58-674a-4a1f-a92b-534cb95d07bb/: levtype_ml.nc  levtype_sfc.nc
tests/profiles/: test_afgl_1986.py  test_cams.py  test_core.py  test_factory.py  test_mipas_2007.py  test_schema.py  test_ussa_1976.py  test_ussa_1976_core.py  test_util.py
tutorials/: index.html
